fix: 接続、受信周りのコードをリファクタリング

--- a/SubAirControl/appsettings.json
+++ b/SubAirControl/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "MqttSettings": {
-    "Address": "192.168.3.13",
+    "Address": "192.168.3.6",
     "Port": 1883,
-    "Topic": "Greetings"
+    "Topic": "AirControl"
   }
 }
